<resources>
    <string name="app_name">Licenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In with Spotify</string>
    <string name="open_with_spotify">Open with Spotify</string>
    <string name="top_tracks_4_weeks">Top 20 tracks past 4 weeks</string>
    <string name="top_artists_4_weeks">Top 20 artists past 4 weeks</string>
    <string name="recently_played_on_spotify">Recently played on Spotify</string>
    <string name="discover">Discover</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="currently_playing_on_spotify">Currently Playing on Spotify</string>
    <string name="discover_next_song">Discover your next song to keep on repeat</string>
    <string name="discover_based_on_tracks">Discover new music based on 3 of your favorite tracks</string>
    <string name="discover_based_on_artists">Discover new music based on 3 of your favorite artists</string>
    <string name="based_on_these_tracks">Based on these tracks:</string>
    <string name="based_on_these_artists">Based on these artists:</string>
    <string name="we_think_you_like">We think you\'d like:</string>
    <string name="discover_again">Discover again</string>
    <string name="play_sample">Play Sample</string>
    <string name="stop_sample">Stop Sample</string>
    <string name="no_sample">No Sample</string>
    <string name="loading">Loading…</string>
    <string name="failed_to_load">Failed to Load</string>
    <string name="create_game">Create game</string>
    <string name="join_game">Join game</string>
    <string name="guessify">Guessify</string>
    <string name="pwd_by">Pwd. by</string>
    <string name="select_the_game_mode">Select the game mode</string>
    <string name="music_genres">Music Genres</string>
    <string name="most_listened_songs">Most Listened Songs</string>
    <string name="most_listened_artists">Most Listened Artists</string>
    <string name="choose_a_genre">Choose a genre</string>
    <string name="game_room">Game Room</string>
    <string name="game_mode">Game Mode:</string>
    <string name="game_pin">Game PIN</string>
    <string name="start_game">Start Game</string>
    <string name="what_s_the_song">What\'s the song?</string>
    <string name="who_s_the_artist">Who\'s the artist?</string>
    <string name="please_wait_while_we_load_the_songs">Please wait while we load the songs</string>
    <string name="game_will_start">Game will start in</string>
    <string name="please_wait_for_everybody_to_finish_guessing">Please wait for everybody to finish guessing</string>
    <string name="this_is_the_final_leaderboard">This is the final leaderboard</string>
    <string name="the_winner_is">The winner is...</string>
</resources>