<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.antoniofalcescu.licenta.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.HomeFragment">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_title_margin"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/guessify_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/guessify"
                android:textSize="@dimen/title_text"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="96dp"
                android:layout_marginTop="@dimen/extra_small_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/extra_small_margin"
                    android:text="@string/pwd_by"
                    android:textSize="@dimen/small_text"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="@dimen/extra_small_margin"
                    android:src="@drawable/spotify_logo_white" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/separator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/extra_large_margin"
            android:layout_marginTop="@dimen/extra_large_margin"
            android:layout_marginEnd="@dimen/extra_large_margin"
            android:background="@color/md_theme_dark_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <LinearLayout
            android:id="@+id/start_game_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/extra_large_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/create_game"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/create_game"
                android:textAllCaps="true"
                android:textSize="@dimen/button_big_text_size" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/join_game"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/large_margin"
                android:text="@string/join_game"
                android:textAllCaps="true"
                android:textSize="@dimen/button_big_text_size" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
