<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.antoniofalcescu.licenta.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".profile.ProfileFragment">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/extra_large_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/profile_image_size"
                android:layout_height="@dimen/profile_image_size"
                android:background="@drawable/circular_image"
                app:circleImageUrl="@{viewModel.profile.images[0].url}"
                app:srcCompat="@drawable/loading_animation"
                tools:srcCompat="@drawable/loading_animation" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/small_margin"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/country_flag_image"
                        android:layout_width="@dimen/country_flag_size"
                        android:layout_height="@dimen/country_flag_size"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/extra_small_margin"
                        app:countryFlag="@{viewModel.profile.country}"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/small_margin"
                        android:text="@{viewModel.profile.display_name}"
                        android:textSize="@dimen/big_text"
                        android:textStyle="bold" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/open_spotify_button"
                    style="@style/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxWidth="@dimen/button_max_width_size"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:drawableStart="@drawable/spotify"
                    android:text="@string/open_with_spotify" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/extra_large_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/extra_large_margin"
            android:background="@color/md_theme_dark_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/medium_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/top_tracks_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/extra_large_margin"
                    android:text="@string/top_tracks_4_weeks"
                    android:textSize="@dimen/big_text"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/top_tracks_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/medium_margin"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:tracksList="@{viewModel.track.items}" />

                <TextView
                    android:id="@+id/top_artists_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/extra_large_margin"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:text="@string/top_artists_4_weeks"
                    android:textSize="@dimen/big_text"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/top_artists_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/medium_margin"
                    android:orientation="horizontal"
                    app:artistsList="@{viewModel.artist.items}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <TextView
                    android:id="@+id/recently_played_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/extra_large_margin"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:text="@string/recently_played_on_spotify"
                    android:textSize="@dimen/big_text"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recently_played_recycler"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:orientation="vertical"
                    android:nestedScrollingEnabled="true"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:recentlyPlayedList="@{viewModel.recentlyPlayed.items}" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
